[gd_scene load_steps=10 format=3 uid="uid://608a11f00jrg"]

[ext_resource type="Script" uid="uid://cxgh2n1oayxjt" path="res://scenes/game_menu.gd" id="1_ks0v2"]
[ext_resource type="Script" uid="uid://bcoel4y5j5jap" path="res://scenes/display_score.gd" id="2_5iet5"]
[ext_resource type="FontFile" uid="uid://rm8deh0nxdgw" path="res://fonts/space-madness-font/SpaceMadness-2R6v.ttf" id="2_jhgdl"]
[ext_resource type="PackedScene" uid="uid://cy3eyu8gfyu1n" path="res://scenes/hotbar_button.tscn" id="3_6q850"]
[ext_resource type="Texture2D" uid="uid://dgk6xtqgni6vv" path="res://assets/art/shovel_icon.png" id="4_a6tct"]
[ext_resource type="Texture2D" uid="uid://b7fhm22gog55y" path="res://assets/art/bucket_icon.png" id="5_jhgdl"]
[ext_resource type="Texture2D" uid="uid://d0kdng5s0glbr" path="res://assets/art/hoe_icon.png" id="6_3mtdm"]
[ext_resource type="Texture2D" uid="uid://vfaiwwpl7ne4" path="res://assets/art/collector_icon.png" id="7_5ou5n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20eqh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.973535, 0.973535, 0.973535, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Game Menu" type="Control" node_paths=PackedStringArray("score_node")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ks0v2")
score_node = NodePath("Sidebar/MarginContainer/VBoxContainer/DisplayScore")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sidebar" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 125.0
offset_bottom = 362.0

[node name="MarginContainer" type="MarginContainer" parent="Sidebar"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Sidebar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="DisplayScore" type="RichTextLabel" parent="Sidebar/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_jhgdl")
script = ExtResource("2_5iet5")

[node name="End Game" type="Button" parent="Sidebar/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jhgdl")
text = "Complete"

[node name="Exit to Menu" type="Button" parent="Sidebar/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jhgdl")
text = "Exit to Menu"

[node name="Exit to Desktop" type="Button" parent="Sidebar/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jhgdl")
text = "Exit to Desktop"

[node name="Hotbar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -272.0
offset_bottom = 272.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_20eqh")

[node name="MarginContainer" type="MarginContainer" parent="Hotbar"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Hotbar/MarginContainer"]
layout_mode = 2

[node name="HotbarButton" parent="Hotbar/MarginContainer/VBoxContainer" instance=ExtResource("3_6q850")]
layout_mode = 2
tool_index = 1
texture = ExtResource("4_a6tct")

[node name="HotbarButton2" parent="Hotbar/MarginContainer/VBoxContainer" instance=ExtResource("3_6q850")]
layout_mode = 2
tool_index = 2
texture = ExtResource("5_jhgdl")

[node name="HotbarButton3" parent="Hotbar/MarginContainer/VBoxContainer" instance=ExtResource("3_6q850")]
layout_mode = 2
tool_index = 3
texture = ExtResource("6_3mtdm")

[node name="HotbarButton4" parent="Hotbar/MarginContainer/VBoxContainer" instance=ExtResource("3_6q850")]
layout_mode = 2
tool_index = 4
texture = ExtResource("7_5ou5n")

[connection signal="pressed" from="Button" to="." method="interact_with_game"]
[connection signal="pressed" from="Sidebar/MarginContainer/VBoxContainer/End Game" to="." method="_on_end_game_pressed"]
[connection signal="pressed" from="Sidebar/MarginContainer/VBoxContainer/Exit to Menu" to="." method="_on_exit_to_menu_pressed"]
[connection signal="pressed" from="Sidebar/MarginContainer/VBoxContainer/Exit to Desktop" to="." method="_on_exit_to_desktop_pressed"]
[connection signal="tool_selected" from="Hotbar/MarginContainer/VBoxContainer/HotbarButton" to="." method="_on_tools_item_selected"]
[connection signal="tool_selected" from="Hotbar/MarginContainer/VBoxContainer/HotbarButton2" to="." method="_on_tools_item_selected"]
[connection signal="tool_selected" from="Hotbar/MarginContainer/VBoxContainer/HotbarButton3" to="." method="_on_tools_item_selected"]
[connection signal="tool_selected" from="Hotbar/MarginContainer/VBoxContainer/HotbarButton4" to="." method="_on_tools_item_selected"]
